--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,25 @@ services:
     volumes:
       - test_db_postgres:/test_db/:ro
 
+  yugabyte:
+    image: yugabytedb/yugabyte:2.11.0.0-b7
+    container_name: mangodb_yugabyte
+    command: ['bin/yugabyted', 'start', '--daemon=false', '--ui=false']
+    ports:
+      - 127.0.0.1:5432:5433
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+    environment:
+      # UTC−03:30/−02:30. Set to catch timezone problems.
+      - TZ=America/St_Johns
+    volumes:
+      - test_db_postgres:/docker-entrypoint-initdb.d/:ro
+    healthcheck:
+      test: ['CMD', 'psql', '-U', 'postgres', '-l']
+      interval: 3s
+      timeout: 5s
+      retries: 30
+
   # for compatibility testing and mongosh
   mongodb:
     image: mongo:5.0.4
